Revision history for {{$dist->name}}

{{$NEXT}}

4.300017  2012-05-31 12:17:45 America/New_York
          also check plugin version requirements in dzil authordeps --missing
          (Karen Etheridge)

          add 'dzil add' to add new modules to an existing dist (thanks, David
          Golden!)

          misc. bugfixes (thanks, Karen Etheridge and Olivier Mengué!)

4.300016  2012-05-04 22:09:10 America/New_York
          make AutoPrereqs treat .psgi files as scannable (thanks, Jakob Voss!)

          add yet more links in plugins documentation to help discoverability
          of other plugins.  (thanks, Olivier Mengué!)

          AutoPrereqs: skip author and release tests when scanning (RT#76305).
          (thanks, Olivier Mengué!)

4.300015  2012-04-23 21:38:21 America/New_York
          require a CPAN::Meta::Requirements 2.121 to get the
          requirements_for_module (thanks, Olivier Mengué!)

          'dzil run' with no arguments will now invoke a new shell.  (thanks,
          Karen Etheridge!)

          dzil clean now has has a "dry run" option.  (thanks, Karen
          Etheridge!)

          add more links in plugins documentation to help discoverability
          of other plugins.  (thanks, Olivier Mengué!)

          support :version requirement for bundles (thanks, Randy Stauner!)

4.300014  2012-04-05 12:46:33 America/New_York
          added the CPANFile plugin to create "cpanfile" prereq format

          stop emitting an empty line in authordeps output (thanks, Olivier
          Mengué!)

4.300013  2012-03-31 15:55:47 Europe/Paris
          dzil test has a new option, --all, which is the equivalent of
          --release --automated --author.

4.300012  2012-03-30 14:31:56 Europe/Paris
          add 0 and never <undef> to the prereqs (thanks, David Golden)

4.300011  2012-03-30 11:42:44 Europe/Paris
          do not claim that a dep is missing in "listdeps" when it is present